--- a/package.json
+++ b/package.json
@@ -20,10 +20,9 @@
   "homepage": "https://github.com/daKomma/GameOfLife#readme",
   "dependencies": {
     "@types/yargs": "^17.0.22",
-    "fs-extra": "^11.1.0",
     "log-update": "4.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "yargs": "^17.7.1"
+    "yargs": "17.7.1"
   }
 }
