--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "CommonJS",
     "rootDir": "./src",
     "resolveJsonModule": true,
+    "esModuleInterop": true,
     "sourceMap": true,
     "outDir": "./dist",
     "forceConsistentCasingInFileNames": true,
